@startuml de Classe

abstract class Model {
  # db: PDO
  {static} # conn: PDO

  + __construct()
  {static} + getConn(): PDO

  {static} + insert(String table, Array columns, Array values): Array
  {static} + select(String table, Array columns, String where): Array
  {static} + selectOne(String table, Array columns, String where): Array
  {static} + update(String table, Array columns, Array values, String where): Array
  {static} + delete(String table, String where): Array
}

class Orçamento extends Model {
  - id: int
  - nome: String
  - descricao: String
  - criado_em: Datetime
  - estado_referencia: String
  - mes_referencia: Date
  - bdi: double
  - desonerado: bool
  - id_escritorio: int

  + listar(id_escritorio): List<Orçamento>
  + criar(): Orçamento
  + editar(): bool
  + excluir(): bool
  + visualizar(): Orçamento
  + listarItens(): List<Item>
  + pesquisa(): List<Orçamento>
  + pesquisarComposição(): List<Item>
  + pesquisarInsumo(): List<Item>

}

class Etapa extends Model {
  - id: int
  - descricao: String
  - id_orcamento: int
  - id_proxima_etapa: int

  + listar(): List<Etapa>
  + criar(): Etapa
  + excluir(): bool
  + editar(): bool
}

class Item extends Model {
  - id: int
  - codigo: int
  - quantidade: double
  - tipo: char
  - id_etapa: int
  - id_proximo_item: int

  - descricao: String
  - unidade: String
  - estado_referencia: String
  - mes_referencia: Date
  - desonerado: bool
  - preco_unitario: double

  + listar(): List<Item>
  + criar(): Item
  + excluir(): bool
}

' class detalhes_composicao_insumo extends Model {
'   - id: int
'   - codigo: int
'   - descricao: String
'   - unidade: String
'   - estado_referencia: String
'   - mes_referencia: Date
'   - desonerado: bool
'   - preco_unitario: double
' }

class Usuario extends Model {
  - nome: String
  - usuario: String
  - senha: String
  - categoria: String
  - cpf: String
  - telefone: String
  - id_escritorio: int
  - arquivado: bool

  + login(): bool
  + logout(): bool
  + criar(): Usuario
  + editar(): bool
  + excluir(): bool
  + listar(): List<Usuario>
}

class Escritorio extends Model {
  - id: int
  - nome: String
  - cnpj: String
  - telefone: String
  - endereco: String
  - observacoes: String
  - deletado: bool
}


Orçamento "1" -- "0..* " Usuario : criado por
Orçamento "1  " -- "0..*" Etapa : possui
Orçamento "0..*" -- "1  " Escritorio : pertence a


Etapa "1 " -- "0..*" Item : contém

' Item "1" - "1" detalhes_composicao_insumo : detalha em

@enduml

